--- a/src/components/widget/style.css
+++ b/src/components/widget/style.css
@@ -1,8 +1,9 @@
+
 input {
   padding: .5rem;
   font-size: 16px;
   width: 100%;
-  /* display: block; */
+  display: block;
   border-radius: 4px;
   border: 1px solid #ccc;
 }
@@ -29,7 +30,7 @@ label {
   margin-top: .25rem;
 }
 
-button {
+.btn {
   max-width: 150px;
   margin: 20px 0;
   padding: 12px 20px;
@@ -45,16 +46,12 @@ button {
   -webkit-appearance: none;
 }
 
-button:disabled {
+.btn:disabled {
   opacity: .5;
   cursor: not-allowed !important;
 }
 
-button + button {
-  margin-left: .5rem;
-}
-
-button.outline {
+.btn.outline {
   background-color: #eee;
   border: 1px solid #aaa;
   color: #555;
