--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,3 @@
-body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
-    sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-size: 14px;
-  line-height: 1.5;
-  color: #24292e;
-  background-color: #fff;
-}
-
-
 input {
   padding: .5rem;
   font-size: 16px;
@@ -64,6 +54,16 @@ label {
   background-color: #eee;
   border: 1px solid #aaa;
   color: #555;
+}
+
+.confirm-container {
+  display: flex;
+  justify-content: center;
+}
+
+.confirm {
+  margin: 20px auto;
+  width: 200px;
 }
 
 ul.react-datepicker__time-list {
